--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
 </head>
 <body>
 
+	<p>
+		Instructions:<br/>
+		D: Move down and stop<br/>
+		U: Start mov up again<br/>
+		Arrow up/down: move up down step<br/>
+		Shift + Arrow up/down: move up or down large amount
+	</p>
+
 	<div id="africa">
 		<img src="border.png" id="border" />
 		<img src="coinsolyx.png" id="coins" />
