--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 		Instructions:<br/>
 		D: Move down and stop<br/>
 		U: Start move up again<br/>
+		M: Pop down Madagascar<br/>
 		Arrow up/down: move up down step<br/>
-		Shift + Arrow up/down: move up or down large amount
+		Shift + Arrow up/down: move up or down large amount<br/>
 	</p>
 
 	<div id="africa">
